[WEBDEV-449][WEBDEV-469] <ul> tag fixes & spacing for multiple hints. (#358)

--- a/src/stylesheets/components/_highlight.scss
+++ b/src/stylesheets/components/_highlight.scss
@@ -63,8 +63,10 @@
 /*--- Label Components ---*/
 
 .hint {
-  margin-right: $base-spacing-unit;
   padding: ($base-spacing-unit - 4) $base-spacing-unit;
+  & + .hint {
+    margin-right: $base-spacing-unit;
+  }
 }
 
 .status--banner .hint {
